@@ -226,34 +226,7 @@ function showRequestForm() {
 
   echo "<div id='filter_control' class='disabled'><label><input type='checkbox' name='do_filter' id='do_filter' value='1' checked disabled onchange='updateSlotInfo()'/> filter times and rooms shown below using the data entered above</label></div>\n";
 
-  $times = getAllowedTimes24Array($cur_day,REGISTRATION_HOURS);
-  foreach( $times as $hours ) {
-    $min_hour = (int)explode(":",$hours['start'])[0];
-    $max_hour = (int)explode(":",$hours['end'])[0];
-
-    for( $hour=$min_hour; $hour < $max_hour; $hour++ ) {
-      if( $hour < 12 ) {
-        $hour12 = $hour;
-        $ampm = "am";
-      } else {
-        $hour12 = $hour-12;
-        if( $hour12==0 ) $hour12 = 12;
-        $ampm = "pm";
-      }
-      echo "<div class='row'>";
-
-      $vname = "slot_{$hour}_0";
-      echo "<div id='{$vname}' class='col-sm'><nobr>{$hour12} {$ampm}</nobr> <span id='{$vname}-summary' class='slot-summary'></span>";
-
-      echo "<div class='slotinfo'></div>";
-      echo "</div>";
-
-      echo "</div>\n";
-    }
-  }
-
-  # add some whitespace at the bottom to prevent show/hide of elements from jerking around the scroll position on the page
-  echo "<div style='padding-top: 50vh'/></div>\n";
+  showOccupancyList();
 
   ?><script>
     function repeatChanged() {
@@ -324,28 +297,7 @@ function showRequestForm() {
         url += "&department=" + encodeURIComponent(department);
       }
       $.ajax({ url: url, success: function(data) {
-        var slots = JSON.parse(data);
-        $.each(slots,function (k,v) {
-          var slot_e = document.getElementById(k);
-          if( !slot_e ) return;
-          if( v == "hide" ) {
-            $(slot_e).hide();
-            v = "";
-          } else {
-            $(slot_e).show();
-          }
-          if( k.indexOf("-summary") > -1 ) {
-            $(slot_e).html(v);
-          }
-          else {
-            $(slot_e).find('.slotinfo').html(v);
-            if( v ) {
-              $(slot_e).addClass("used_slot");
-            } else {
-              $(slot_e).removeClass("used_slot");
-            }
-          }
-        });
+        fillOccupancyList(data);
       },
       complete: function() {
         setTimeout(updateSlotInfo,60000);
